Fixed references. Made layout of Web UI more wide. Added scrollbars for specifications page on Web site.

--- a/Market.Cqrsnes.Web/Content/Site.css
+++ b/Market.Cqrsnes.Web/Content/Site.css
@@ -3,7 +3,7 @@
 body 
 {
     background-color: #ffffef;
-    width: 800px;
+    width: 1000px;
     margin: 0 auto;
     font-family: sans-serif;
 }
@@ -74,6 +74,11 @@ td
 }
 
 /* Specifications */
+
+pre
+{
+    overflow: auto;
+}
 
 pre.success, pre.failure
 {
